<resources>
    <string name="app_name">Fastbici</string>
    <string name="title_activity_maps">Map</string>
    <string name="title_activity_main">Fastbici</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">android.studio@android.com</string>
    <string name="nav_header_desc">Navigation header</string>
    <string name="action_settings">Settings</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="precio_aprox">Precio Aprox.</string>
    <string name="precio_example">S/.10.00</string>
    <string name="point_B">B</string>
    <string name="point_A">A</string>
    <string name="lugar_de_entrega">Lugar de Entrega</string>
    <string name="lugar_de_recojo">Lugar de Recojo (Opcional)</string>
    <string name="continuar">Continuar</string>
    <string name="leaf_desc">Leaft</string>
    <string name="anotation_precio_aprox">Alerta de Precio Aproximado</string>
    <string name="title_activity_axtivity_goal_detail">AxtivityGoalDetail</string>
    <string name="todo">TODO</string>
    <string name="usuario">Usuario</string>
    <string name="email">Email</string>
    <string name="telefono">Telefono</string>
    <string name="recuperar_pass">Recuperar Contraseña</string>
    <string name="ingresar">Ingresar</string>
    <string name="contrasena">Contraseña</string>
    <string name="company_mark">.@Fastbici</string>
    <string name="b">B</string>
    <string name="donde_recogemos">¿Donde Recogemos?</string>
    <string name="a_donde_vamos">¿A dónde vamos?</string>
    <string name="quien_recibe">¿Quién recibe?</string>
    <string name="phone_invalid">Número de Telefono invalido</string>
    <string name="bandeja_de_pedidos_vacia">Bandeja de Pedidos Vacia</string>
    <string name="title_activity_pedido">PedidoActivity</string>
    <string name="tab_text_1">Productos</string>
    <string name="tab_text_2">Cliente</string>
    <string name="tab_text_3">Resumen</string>
    <string name="referencia_a">Referencia de Recojo</string>
    <string name="lista_de_productos">Lista de Productos</string>
    <string name="a_n_sin_productos">Aún sin Productos</string>
    <string name="direccion_de_entrega">Direccion de Entrega</string>
    <string name="direcci_n_de_recojo">Dirección de Recojo</string>
    <string name="datos_del_cliente">Datos del Cliente</string>
    <string name="datos_adicionales_de_la_entrega">Datos Adicionales de la Entrega</string>
    <string name="descripci_n">Descripción</string>
    <string name="nombre">Nombre</string>
    <string name="referencia_b">Referencia de Entrega</string>
    <string name="cantidad">Cantidad</string>
    <string name="producto">Producto</string>
    <string name="cancelar">Cancelar</string>
    <string name="contactanos">Contactanos</string>
    <string name="punto_de_origen">Punto de origen</string>
    <string name="punto_de_llegada">Punto de llegada</string>
    <string name="title_activity_maps32">Map</string>
    <string name="title_activity_maps_activitysadad">Map</string>
    <string name="title_activity_maps_activityaaa">Map</string>
</resources>
