<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    tools:context=".pedido.main.Paso1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_del_cliente"
                android:textSize="@dimen/textsize_primary"
                android:textColor="@color/colorPrimaryDark"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:padding="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/nombre"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fp2_tietNombre"
                    android:theme="@style/customTextInputLayout"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:padding="0dp"
                android:layout_height="wrap_content"
                android:hint="Telefono"
                app:counterMaxLength="9"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fp2_tietTelefono"
                    android:theme="@style/customTextInputLayout"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:singleLine="true"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>



        </LinearLayout>

        <LinearLayout
            android:layout_marginTop="@dimen/margin_standar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/datos_adicionales_de_la_entrega"
                android:textSize="@dimen/textsize_primary"
                android:textColor="@color/colorPrimaryDark"
                />
            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox.Dense"
                android:layout_width="match_parent"
                android:padding="0dp"
                android:layout_height="wrap_content"
                android:hint="@string/descripci_n"
                app:helperText="Sea breve y conciso en su descripción"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fp2_tietDescripcion"
                    android:theme="@style/customTextInputLayout"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:minLines="5"
                    android:gravity="top"
                    android:inputType="textMultiLine"
                    />

            </com.google.android.material.textfield.TextInputLayout>
        </LinearLayout>


    </LinearLayout>
    <!--
        <com.google.android.material.floatingactionbutton.FloatingActionButton
            android:id="@+id/fmaini_fabEdit"
            style="@style/Widget.MaterialComponents.FloatingActionButton"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="top|end"
            android:layout_marginEnd="@dimen/fab_margin"
            android:layout_marginBottom="@dimen/fab_margin"
            app:backgroundTint="@color/colorAccent"
            app:tint="@color/white"
            app:elevation="0dp"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:rippleColor="@color/colorPrimary"
            app:srcCompat="@drawable/ic_add_white_24dp" />
    -->





</androidx.constraintlayout.widget.ConstraintLayout>