<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:descendantFocusability="beforeDescendants"
    android:focusableInTouchMode="true"
    android:id="@+id/fp1_rootView"
    tools:context=".pedido.main.Paso1Fragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="24dp"
        android:layout_marginTop="32dp"
        android:layout_marginEnd="24dp"
        android:orientation="vertical"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        tools:ignore="MissingConstraints">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_shadow_center"
                    android:text="A"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/p1_tViewDireccionA"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/direcci_n_de_recojo"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/p1_iViewSaveA"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/dividerA"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#666464"
                        app:layout_constraintTop_toBottomOf="@+id/p1_tViewDireccionA"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/p1_iViewSaveA"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_save_black_24dp"
                        app:layout_constraintBottom_toTopOf="@+id/dividerA"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:padding="0dp"
                android:layout_height="100dp"
                android:hint="@string/referencia_a"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fp1_tietRefA"
                    android:theme="@style/customTextInputLayout"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center_vertical"
                android:orientation="horizontal">

                <TextView
                    android:layout_width="30dp"
                    android:layout_height="30dp"
                    android:background="@drawable/shape_shadow_center"
                    android:text="B"
                    android:textStyle="bold"
                    android:textAlignment="center"
                    android:textSize="14sp" />

                <androidx.constraintlayout.widget.ConstraintLayout
                    android:layout_width="match_parent"
                    android:layout_height="match_parent">

                    <TextView
                        android:id="@+id/p1_tViewDireccionB"
                        android:layout_width="0dp"
                        android:layout_height="wrap_content"
                        android:layout_marginTop="0dp"
                        android:layout_marginEnd="8dp"
                        android:text="@string/direccion_de_entrega"
                        android:textSize="20sp"
                        app:layout_constraintEnd_toStartOf="@+id/p1_iViewSaveB"
                        app:layout_constraintStart_toStartOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />

                    <View
                        android:id="@+id/dividerB"
                        android:layout_width="match_parent"
                        android:layout_height="1dp"
                        android:layout_weight="1"
                        android:background="#666464"
                        app:layout_constraintTop_toBottomOf="@+id/p1_tViewDireccionB"
                        tools:ignore="MissingConstraints" />

                    <ImageView
                        android:id="@+id/p1_iViewSaveB"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="8dp"
                        android:src="@drawable/ic_save_black_24dp"
                        app:layout_constraintBottom_toTopOf="@+id/dividerB"
                        app:layout_constraintEnd_toEndOf="parent"
                        app:layout_constraintTop_toTopOf="parent"
                        tools:ignore="MissingConstraints" />


                </androidx.constraintlayout.widget.ConstraintLayout>

            </LinearLayout>

            <com.google.android.material.textfield.TextInputLayout
                style="@style/Widget.MaterialComponents.TextInputLayout.OutlinedBox"
                android:layout_width="match_parent"
                android:layout_height="100dp"
                android:hint="@string/referencia_b"
                android:textColorHint="@color/colorPrimaryDark"
                app:boxStrokeColor="@color/colorPrimaryDark"
                app:hintTextColor="@color/colorPrimaryDark">

                <com.google.android.material.textfield.TextInputEditText
                    android:id="@+id/fp1_tietRefB"
                    android:theme="@style/customTextInputLayout"
                    android:textCursorDrawable="@drawable/custom_edit_text_cursor"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content" />

            </com.google.android.material.textfield.TextInputLayout>

        </LinearLayout>


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="@string/lista_de_productos"
                android:textColor="@color/colorPrimaryDark"
                android:textSize="24sp" />

            <androidx.constraintlayout.widget.ConstraintLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="19dp"
                    android:layout_marginTop="8dp"
                    android:text="@string/a_n_sin_productos"
                    app:layout_constraintEnd_toEndOf="parent"
                    app:layout_constraintStart_toStartOf="parent"
                    app:layout_constraintTop_toTopOf="parent" />

                <androidx.recyclerview.widget.RecyclerView
                    android:id="@+id/fp1_rViewProductos"
                    app:layoutManager="androidx.recyclerview.widget.GridLayoutManager"
                    app:spanCount="1"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content">


                </androidx.recyclerview.widget.RecyclerView>


            </androidx.constraintlayout.widget.ConstraintLayout>


        </LinearLayout>

    </LinearLayout>


    <com.google.android.material.floatingactionbutton.FloatingActionButton
        android:id="@+id/fp1_fabAddProducts"
        style="@style/Widget.MaterialComponents.FloatingActionButton"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="top|end"
        android:layout_marginEnd="@dimen/fab_margin"
        android:layout_marginBottom="@dimen/fab_margin"
        app:backgroundTint="@color/colorAccent"
        app:tint="@color/white"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:rippleColor="@color/colorPrimary"
        app:srcCompat="@drawable/ic_add_white_24dp" />






</androidx.constraintlayout.widget.ConstraintLayout>